[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-line"
version = "0.1.0"
description = "LangChain integration for LINE Messaging API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "langchain-core>=1.0",
    "line-bot-sdk>=3.0",
    "pydantic>=2.7",
]

[project.urls]
Repository = "https://github.com/sunnyrc/langchain-line"
Documentation = "https://github.com/sunnyrc/langchain-line#readme"

[dependency-groups]
dev = [
    "pytest>=7.3",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.12",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
disallow_untyped_defs = true